2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-14 Taylor Jones
 * Updated server.py to print "This is jonest31's Web server!"

2014-01-23  Taylor Jones

 * Branched test file and added test functions for each case
 * Divided code into functions and added features to functions
 * Handled POST and GET requests

2014-03-19  Taylor Jones

 * Removed render.py
 * Fixed href tag in images.html
 * Updated arguments in test_server.py main() function
 * Project Option 5: Added images_thumb with thumbnails. Also added a URL that provides a list of images, resized to thumbnails (50x50).
 
 2014-03-26  Taylor Jones

 * Added quotes folder, edited the quotes displayed just for fun.
 * Added chat messaging functionality.
 * Updated server.py main() function to handle quote and chat functionality.
 * Project Option 3: Added layout.css from oswd.org. Changed some colors and images to improve layout of image page.