@@ -17,6 +17,7 @@
               <ul>
                 <li><a href='upload'>Upload an image</a></li>
                 <li><a href='image'>Show most recent image</a></li>
+				<li><a href='search'>Search for an image</a></li>
               </ul>
             </div>
           </div>
