@@ -1,0 +1,10 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h2>Here is your image:</h2>
+<p>
+<img width=40% src='image?i={{ i['index'] }}'/>
+</p>
+
+{% endblock %}
