@@ -2,9 +2,8 @@
 
 {% block content %}
 
-<h2>Upload a PNG:</h2>
-<form enctype='multipart/form-data' action='upload_receive' method='POST'>
-<p>Filename: <input type='file' name='file'></p>
+<h2>Search for a PNG:</h2>
+<form enctype='multipart/form-data' action='search_result' method='POST'>
 <p>Image Name: <input type='text' name='name' size=25></p>
 <p>Description: <input type='text' name='desc' size=50></p>
 <p><input type='submit'></p>
